--- a/charts/aaf-hello/values.yaml
+++ b/charts/aaf-hello/values.yaml
@@ -1,4 +1,4 @@
-# Copyright 2018 Intel Corporation, Inc
+# Copyright © 2017 Amdocs, Bell Canada
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -18,41 +18,22 @@
 global:
   nodePortPrefix: 302
   repositorySecret: eyJuZXh1czMub25hcC5vcmc6MTAwMDEiOnsidXNlcm5hbWUiOiJkb2NrZXIiLCJwYXNzd29yZCI6ImRvY2tlciIsImVtYWlsIjoiQCIsImF1dGgiOiJaRzlqYTJWeU9tUnZZMnRsY2c9PSJ9fQ==
-  persistence: {}
-
+  readinessRepository: oomk8s
+  readinessImage: readiness-check:1.1.0
+  
+#################################################################
+# Application configuration defaults.
+#################################################################
 # application image
 repository: nexus3.onap.org:10001
-image:
-  consul: library/consul:1.0.6
-  vault: library/vault:0.10.0
+image: onap/aaf/aaf_hello:2.1.0-SNAPSHOT
 pullPolicy: Always
 
 # flag to enable debugging - application support required
 debugEnabled: false
 
-#################################################################
-# Application configuration defaults.
-#################################################################
-config:
-  consul:
-    server: true
-    log_level: INFO
-    server: true
-    data_dir: '/consul/data'
-    ports:
-      http: 8500
-      https: -1
-
-  vault:
-    storage:
-      consul:
-        address: localhost:8500
-        path: smsvault
-    listener:
-      tcp:
-        address: '[::]:8200'
-        tls_disable: true
-    disable_mlock: true
+# application configuration
+config: {}
 
 # default number of instances
 replicaCount: 1
@@ -73,20 +54,14 @@ readiness:
   initialDelaySeconds: 10
   periodSeconds: 10
 
-persistence:
-  enabled: true
-  volumeReclaimPolicy: Retain
-  accessMode: ReadWriteOnce
-  size: 2Gi
-  mountPath: /dockerdata-nfs
-  mountSubPath: sms/consul/data
-
 service:
-  type: NodePort
-  name: aaf-sms-db
-  portName: aaf-sms-db
-  internalPort: 8200
-  nodePort: 44
+  name: aaf-hello
+  type: ClusterIP
+  portName: aaf-hello
+  #targetPort
+  internalPort: 8130
+  #port
+  externalPort: 8130
 
 ingress:
   enabled: false
