--- a/charts/aaf-sms/values.yaml
+++ b/charts/aaf-sms/values.yaml
@@ -29,7 +29,7 @@ global:
 #################################################################
 # application image
 repository: nexus3.onap.org:10001
-image: onap/aaf/sms
+image: onap/aaf/sms:latest
 pullPolicy: Always
 
 # flag to enable debugging - application support required
