--- a/values.yaml
+++ b/values.yaml
@@ -20,6 +20,8 @@ global:
   repositorySecret: eyJuZXh1czMub25hcC5vcmc6MTAwMDEiOnsidXNlcm5hbWUiOiJkb2NrZXIiLCJwYXNzd29yZCI6ImRvY2tlciIsImVtYWlsIjoiQCIsImF1dGgiOiJaRzlqYTJWeU9tUnZZMnRsY2c9PSJ9fQ==
   readinessRepository: oomk8s
   readinessImage: readiness-check:2.0.0
+  ubuntuInitRepository: registry.hub.docker.com
+  ubuntuInitImage: oomk8s/ubuntu-init:2.0.0
   persistence: 
     enabled: true
 
@@ -35,6 +37,9 @@ config:
   helloServiceName: aaf-hello
   oauthServiceName: aaf-oauth
   csServiceName: aaf-cass
+  # gerrit branch where the latest aaf/auth/sample/public code exists
+  gerritProject: http://gerrit.onap.org/r/aaf/authz.git
+  gerritBranch: master
 
 # default number of instances
 replicaCount: 1
