Enable https endpoint for SMS
SMS got a new SAN certificate and we are
using that in this deployment now.
Applications will now query on https://aaf-sms.onap
This should also fix the failing healthcheck
for SMS

-P3: Changing liveness and readiness probes to use
 https instead of tcp which was throwing up TLS error
 spam on the server

Issue-ID: AAF-284
Change-Id: I654eced0bb75c8b5c807c45773f308d824dfb571
Signed-off-by: Kiran Kamineni <kiran.k.kamineni@intel.com>

--- a/charts/aaf-sms/charts/aaf-sms-quorumclient/templates/configmap.yaml
+++ b/charts/aaf-sms/charts/aaf-sms-quorumclient/templates/configmap.yaml
@@ -23,5 +23,4 @@ metadata:
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 data:
-  config.json: |
-    {{ .Values.config | toJson }}
+{{ tpl (.Files.Glob "resources/config/*").AsConfig . | indent 2 }}
