--- a/charts/aaf-sms/charts/aaf-sms-quorumclient/templates/statefulset.yaml
+++ b/charts/aaf-sms/charts/aaf-sms-quorumclient/templates/statefulset.yaml
@@ -63,6 +63,10 @@ spec:
       - name : {{ include "common.name" . }}
         configMap:
           name: {{ include "common.fullname" . }}
+          items:
+          - key: config.json
+            path: config.json
+            mode: 0755
       - name: {{ include "common.fullname" . }}-auth
         persistentVolumeClaim:
           claimName: {{ include "common.fullname" . }}
