--- a/charts/aaf-service/values.yaml
+++ b/charts/aaf-service/values.yaml
@@ -25,7 +25,7 @@ global:
 #################################################################
 # application image
 repository: nexus3.onap.org:10001
-image: onap/aaf/aaf_service:2.1.0-SNAPSHOT
+image: onap/aaf/aaf_service:2.1.1
 pullPolicy: Always
 
 # flag to enable debugging - application support required
