--- a/charts/aaf-sms/values.yaml
+++ b/charts/aaf-sms/values.yaml
@@ -28,7 +28,7 @@ global:
 #################################################################
 # application image
 repository: nexus3.onap.org:10001
-image: onap/aaf/sms:latest
+image: onap/aaf/sms:2.0.0
 pullPolicy: Always
 
 # flag to enable debugging - application support required
