Fix AAF CS startup timeouts
Change-Id: I8140e6c392726e78e0a2c9b18337fa712eb9d944
Issue-ID: OOM-1128
Signed-off-by: BorislavG <Borislav.Glozman@amdocs.com>

--- a/charts/aaf-cs/templates/deployment.yaml
+++ b/charts/aaf-cs/templates/deployment.yaml
@@ -68,7 +68,7 @@ spec:
               - /bin/sh
               - -c
               - >
-                /bin/sleep 30;
+                /bin/sleep {{ .Values.readiness.initialDelaySeconds }};
                 cd /data/;
                 cqlsh -u root -p root -f keyspace.cql ;
                 cqlsh -u root -p root -f init.cql ;
