--- a/values.yaml
+++ b/values.yaml
@@ -38,7 +38,7 @@ config:
   csServiceName: aaf-cass
   # gerrit branch where the latest aaf/auth/sample/public code exists
   gerritProject: http://gerrit.onap.org/r/aaf/authz.git
-  gerritBranch: master
+  gerritBranch: beijing
 
 # default number of instances
 replicaCount: 1
