Remove stderr/stdout redirection from Command
Issue-ID: AAF-353
Change-Id: Ief7a3dda7160e385c15ed0be7e158c7de3af8cdd
Signed-off-by: Instrumental <jonathan.gathman@att.com>

--- a/charts/aaf-locate/templates/deployment.yaml
+++ b/charts/aaf-locate/templates/deployment.yaml
@@ -66,7 +66,7 @@ spec:
         name: {{ include "common.name" . }}
         image: "{{ include "common.repository" . }}/{{ .Values.image }}"
         imagePullPolicy: {{ .Values.global.pullPolicy | default .Values.pullPolicy }}
-        command: ["/bin/bash","-c"," ln -s /opt/app/osaaf/data /data;/opt/app/aaf/locate/bin/locate >> /opt/app/osaaf/logs/locate/stdout`date -I` 2>> /opt/app/osaaf/logs/locate/stderr`date -I`"]
+        command: ["/bin/bash","-c"," ln -s /opt/app/osaaf/data /data;/opt/app/aaf/locate/bin/locate "]
         volumeMounts:
         - mountPath: /opt/app/osaaf
           name: aaf-persistent-vol
