Add readiness step for deployment
Using an initContainer and to start SMS only after
vault and consul have already started. This prevents
restarts of the sms container.

Issue-ID: AAF-421
Change-Id: Ied3264711d5d931a1d18523eadcc84e188ededa5
Signed-off-by: Kiran Kamineni <kiran.k.kamineni@intel.com>

--- a/charts/aaf-sms/templates/deployment.yaml
+++ b/charts/aaf-sms/templates/deployment.yaml
@@ -30,10 +30,27 @@ spec:
         app: {{ include "common.name" . }}
         release: {{ .Release.Name }}
     spec:
+      initContainers:
+      - image:  "{{ .Values.global.readinessRepository }}/{{ .Values.global.readinessImage }}"
+        imagePullPolicy: {{ .Values.global.pullPolicy | default .Values.pullPolicy }}
+        name: {{ include "common.name" . }}-readiness
+        command:
+        - /root/ready.py
+        args:
+        - --container-name
+        - "aaf-sms-vault"
+        - --container-name
+        - "aaf-sms-vault-backend"
+        env:
+        - name: NAMESPACE
+          valueFrom:
+            fieldRef:
+              apiVersion: v1
+              fieldPath: metadata.namespace
       containers:
       - image: "{{ include "common.repository" . }}/{{ .Values.image }}"
-        name: {{ include "common.name" . }}
         imagePullPolicy: {{ .Values.pullPolicy }}
+        name: {{ include "common.name" . }}
         command: ["/sms/bin/sms"]
         workingDir: /sms/
         ports:
