--- a/charts/aaf-fs/values.yaml
+++ b/charts/aaf-fs/values.yaml
@@ -25,7 +25,7 @@ global:
 #################################################################
 # application image
 repository: nexus3.onap.org:10001
-image: onap/aaf/aaf_fs:2.1.1
+image: onap/aaf/aaf_fs:2.1.2-SNAPSHOT
 pullPolicy: Always
 
 # flag to enable debugging - application support required
