--- a/charts/aaf-locate/values.yaml
+++ b/charts/aaf-locate/values.yaml
@@ -29,7 +29,7 @@ global:
 #################################################################
 # application image
 repository: nexus3.onap.org:10001
-image: onap/aaf/aaf_locate:2.1.1
+image: onap/aaf/aaf_locate:2.1.2-SNAPSHOT
 pullPolicy: Always
 
 # flag to enable debugging - application support required
