commiting resource limit for onap-aaf component
cleaning up merge conflict
implementing template
reducing overly large resource limits
adding limits to aaf-sms.

Issue-ID: OOM-1146

Change-Id: Idac679dc9be94ab92ea95c38f9f237af65307131
Signed-off-by: dsingh.278 <dsingh.278@gmail.com>
Signed-off-by: Mandeep Khinda <mandeep.khinda@amdocs.com>

--- a/charts/aaf-hello/values.yaml
+++ b/charts/aaf-hello/values.yaml
@@ -25,7 +25,7 @@ global:
 #################################################################
 # application image
 repository: nexus3.onap.org:10001
-image: onap/aaf/aaf_hello:2.1.2-SNAPSHOT
+image: onap/aaf/aaf_hello:2.1.1
 pullPolicy: Always
 
 # flag to enable debugging - application support required
@@ -65,21 +65,20 @@ service:
 ingress:
   enabled: false
 
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  #
-  # Example:
-  # Configure resource requests and limits
-  # ref: http://kubernetes.io/docs/user-guide/compute-resources/
-  # Minimum memory for development is 2 CPU cores and 4GB memory
-  # Minimum memory for production is 4 CPU cores and 8GB memory
-#resources:
-#  limits:
-#    cpu: 2
-#    memory: 4Gi
-#  requests:
-#    cpu: 2
-#    memory: 4Gi
+# Configure resource requests and limits
+resources:
+  small:
+    limits:
+      cpu: 200m
+      memory: 500Mi
+    requests:
+      cpu: 10m
+      memory: 200Mi
+  large:
+    limits:
+      cpu: 400m
+      memory: 1Gi
+    requests:
+      cpu: 20m
+      memory: 500Mi
+  unlimited: {}
