--- a/charts/aaf-sms/charts/aaf-sms-vault/templates/statefulset.yaml
+++ b/charts/aaf-sms/charts/aaf-sms-vault/templates/statefulset.yaml
@@ -45,7 +45,8 @@ spec:
         - mountPath: /etc/localtime
           name: localtime
           readOnly: true
-
+        resources:
+{{ include "common.resources" . | indent 10 }}
       - image: "{{ include "common.repository" . }}/{{ .Values.image.consul }}"
         name: {{ include "common.name" . }}-backend
         imagePullPolicy: {{ .Values.global.pullPolicy | default .Values.pullPolicy }}
@@ -62,6 +63,8 @@ spec:
         - mountPath: /etc/localtime
           name: localtime
           readOnly: true
+        resources:
+{{ include "common.resources" . | indent 10 }}
       volumes:
         - name: {{ include "common.fullname" . }}-consuldata
           persistentVolumeClaim:
