--- a/values.yaml
+++ b/values.yaml
@@ -23,7 +23,6 @@ global:
   ubuntuInitImage: oomk8s/ubuntu-init:2.0.0
   persistence:
     enabled: true
-
 #################################################################
 # Application configuration defaults.
 #################################################################
@@ -38,8 +37,9 @@ config:
   csServiceName: aaf-cass
   # gerrit branch where the latest aaf/auth/sample/public code exists
   gerritProject: http://gerrit.onap.org/r/aaf/authz.git
-  gerritBranch: master
+  gerritBranch: 2.0.0-ONAP
 
+flavor: small
 # default number of instances
 replicaCount: 1
 
@@ -83,21 +83,20 @@ persistence:
   mountPath: /dockerdata-nfs
   mountSubPath: aaf/data
 
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  #
-  # Example:
-  # Configure resource requests and limits
-  # ref: http://kubernetes.io/docs/user-guide/compute-resources/
-  # Minimum memory for development is 2 CPU cores and 4GB memory
-  # Minimum memory for production is 4 CPU cores and 8GB memory
-#resources:
-#  limits:
-#    cpu: 2
-#    memory: 4Gi
-#  requests:
-#    cpu: 2
-#    memory: 4Gi
+# Configure resource requests and limits
+resources:
+  small:
+    limits:
+      cpu: 2
+      memory: 3Gi
+    requests:
+      cpu: 2
+      memory: 3Gi
+  large:
+    limits:
+      cpu: 4
+      memory: 6Gi
+    requests:
+      cpu: 4
+      memory: 6Gi
+  unlimited: {}
