--- a/charts/aaf-cs/values.yaml
+++ b/charts/aaf-cs/values.yaml
@@ -17,7 +17,7 @@
 #################################################################
 global:
   nodePortPrefix: 302
-
+flavor: small
 
 #################################################################
 # Application configuration defaults.
@@ -71,21 +71,20 @@ service:
 ingress:
   enabled: false
 
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  #
-  # Example:
-  # Configure resource requests and limits
-  # ref: http://kubernetes.io/docs/user-guide/compute-resources/
-  # Minimum memory for development is 2 CPU cores and 4GB memory
-  # Minimum memory for production is 4 CPU cores and 8GB memory
-#resources:
-#  limits:
-#    cpu: 2
-#    memory: 4Gi
-#  requests:
-#    cpu: 2
-#    memory: 4Gi
+# Configure resource requests and limits
+resources:
+  small:
+    limits:
+      cpu: 200m
+      memory: 10000Mi
+    requests:
+      cpu: 10m
+      memory: 8500Mi
+  large:
+    limits:
+      cpu: 400m
+      memory: 12000Mi
+    requests:
+      cpu: 40m
+      memory: 9000Mi
+  unlimited: {}
