Updating charts to use common resource template
Issue-ID: OOM-1145

Change-Id: I1510339a820802554b6e8b9a201619ef66be17a0
Signed-off-by: Mandeep Khinda <mandeep.khinda@amdocs.com>

--- a/charts/aaf-sms/charts/aaf-sms-quorumclient/templates/statefulset.yaml
+++ b/charts/aaf-sms/charts/aaf-sms-quorumclient/templates/statefulset.yaml
@@ -47,7 +47,7 @@ spec:
           - mountPath: /quorumclient/auth
             name: {{ include "common.fullname" . }}-auth
         resources:
-{{ toYaml .Values.resources | indent 12 }}
+{{ include "common.resources" . | indent 12 }}
         {{- if .Values.nodeSelector }}
         nodeSelector:
 {{ toYaml .Values.nodeSelector | indent 10 }}
