--- a/charts/aaf-cs/templates/deployment.yaml
+++ b/charts/aaf-cs/templates/deployment.yaml
@@ -64,7 +64,7 @@ spec:
         lifecycle:
           postStart:
             exec:
-              command: 
+              command:
               - /bin/sh
               - -c
               - >
@@ -74,8 +74,8 @@ spec:
                 cqlsh -u root -p root -f init.cql ;
                 cqlsh -u root -p root -f osaaf.cql ;
                 cqlsh -u root -p root -f temp_identity.cql
-        resources: 
-{{ toYaml .Values.resources | indent 12 }}
+        resources:
+{{ include "common.resources" . | indent 12 }}
       {{- if .Values.nodeSelector }}
       nodeSelector:
 {{ toYaml .Values.nodeSelector | indent 10 }}
