--- a/charts/aaf-sms/templates/deployment.yaml
+++ b/charts/aaf-sms/templates/deployment.yaml
@@ -81,7 +81,7 @@ spec:
           - mountPath: /sms/auth
             name: {{ include "common.fullname" . }}-auth
         resources:
-{{ toYaml .Values.resources | indent 12 }}
+{{ include "common.resources" . | indent 12 }}
         {{- if .Values.nodeSelector }}
         nodeSelector:
 {{ toYaml .Values.nodeSelector | indent 10 }}
