--- a/templates/job.yaml
+++ b/templates/job.yaml
@@ -56,7 +56,7 @@ spec:
         - mountPath: /data
           name: aaf-persistent-data
         - mountPath: /data1/etc
-          name: aaf-etc 
+          name: aaf-etc
         - mountPath: /data1/data
           name: aaf-data
         - mountPath: /data1/public/iframe_denied_test.html
@@ -102,8 +102,8 @@ spec:
           name: aaf-backup
         - mountPath: /share
           name: aaf-public
-        resources: 
-{{ toYaml .Values.resources | indent 12 }}
+        resources:
+{{ include "common.resources" . | indent 12 }}
       {{- if .Values.nodeSelector }}
       nodeSelector:
 {{ toYaml .Values.nodeSelector | indent 10 }}
