Add sms preload job that preloads secrets
Add a preload job that loads secrets from config
files into secret management service after it comes up.
P1: Includes osdf.json which contains secrets for oof-osdf
P2: Add has.json for oof-has

Issue-ID: AAF-548
Change-Id: Ib03cf6771a445be8ab00621cf26ca0e902af4ab3
Signed-off-by: Kiran Kamineni <kiran.k.kamineni@intel.com>

--- a/charts/aaf-sms/templates/configmap.yaml
+++ b/charts/aaf-sms/templates/configmap.yaml
@@ -1,3 +1,4 @@
+{{/*
 # Copyright 2018 Intel Corporation, Inc
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -11,6 +12,7 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+*/}}
 
 apiVersion: v1
 kind: ConfigMap
@@ -25,3 +27,16 @@ metadata:
 data:
   smsconfig.json: |
     {{ .Values.config | toJson }}
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: {{ include "common.fullname" . }}-preload
+  namespace: {{ include "common.namespace" . }}
+  labels:
+    app: {{ include "common.name" . }}-preload
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+data:
+{{ tpl (.Files.Glob "resources/config/*").AsConfig . | indent 2 }}
